--- a/app/views/mass-mailing-upload.html
+++ b/app/views/mass-mailing-upload.html
@@ -91,57 +91,59 @@
               <span translate="MASS_MAIL_UPLOAD.TITLE">Ship using Excel spreadsheet or text</span>
             </h1>
             <p class="text-muted" style="margin-bottom: 20px;">
-              <span translate="MASS_MAIL_UPLOAD.">Schedule the shipment of multiple packages to multiple recipients.</span>
-               Import your completed file according to the examples below.<br>
-              Only the weight is required, you must take into account the dimensional weight of your parcel calculated as follows: [length (cm) x height (cm) x width (cm)] / 5000.
-              Fill in the highest value between this result and the actual weight.<br>
-              <span class="orange">Careful : if the length is greater than <strong>119 cm</strong> (47 inches), you will not be able to use this service.</span><br>
-              If you encounter any problems, contact the <a href="http://localhost:32770/en/contact-us">Upela Customer Service</a> or send us your file <a href="mailto:contact@upela.com">contact@upela.com</a>
+              <span translate="MASS_MAIL_UPLOAD.COMMENT1">Schedule the shipment of multiple packages to multiple recipients.</span>
+              <span translate="MASS_MAIL_UPLOAD.COMMENT2">Import your completed file according to the examples below.<br></span><br>
+              <span translate="MASS_MAIL_UPLOAD.COMMENT3">Only the weight is required, you must take into account the dimensional weight of your parcel calculated as follows: [length (cm) x height (cm) x width (cm)] / 5000.</span>
+              <span translate="MASS_MAIL_UPLOAD.COMMENT4">Fill in the highest value between this result and the actual weight.<br></span><br>
+              <span class="orange" translate="MASS_MAIL_UPLOAD.COMMENT5">Careful : if the length is greater than <strong>119 cm</strong> (47 inches), you will not be able to use this service.</span><br>
+              <span translate="MASS_MAIL_UPLOAD.COMMENT6">If you encounter any problems, contact the</span>
+              <a href="#/contact-us" translate="MASS_MAIL_UPLOAD.COMMENT7">Upela Customer Service</a>
+              <span translate="MASS_MAIL_UPLOAD.COMMENT8">or send us your file </span>
+              <a href="mailto:contact@upela.com" translate="MASS_MAIL_UPLOAD.COMMENT9">contact@upela.com</a>
             </p>
             <hr>
 
-            <form id="MassMailingForm" class="form-horizontal" role="form" enctype="multipart/form-data" action="http://localhost:32770/en/mass-mailing/upload.php" accept-charset="UTF-8" method="post" onsubmit="return true;">
-              <h3 class="form-group-legend" style="margin-bottom:10px;">YOUR SPREADSHEET</h3>
-
+            <form id="MassMailingForm" class="form-horizontal">
+              <h3 class="form-group-legend" style="margin-bottom:10px;" translate="MASS_MAIL_UPLOAD.SPREADSHEET.TITLE">YOUR SPREADSHEET</h3>
               <div class="clearfix" style="margin-bottom: 0px;">
                 <div class="col-md-8">
-                  <input type="hidden" id="address1_id" name="address1_id" value="439617">
-                  <input type="hidden" id="address1_country_id" name="address1_country_id" value="181">
-                  <input type="hidden" id="address1_country_code" name="address1_country_code" value="RE">
-                  <input type="hidden" id="mass_mailing_upload" name="mass_mailing_upload" value="1">
-
                   <div class="form-group">
-                    <label for="uploadfile" class="control-label col-lg-7 required">Import spreadsheet (xls, xlsx, csv, txt)</label>
+                    <label class="control-label col-lg-7 required" translate="MASS_MAIL_UPLOAD.SPREADSHEET.IMPORT">Import spreadsheet (xls, xlsx, csv, txt)</label>
                     <div class="col-lg-5">
-                      <input type="file" id="uploadfile" name="uploadfile" medium="" style="padding-left: 0; border: 0; background: none;" value="">
+                      <input type="file" medium="" style="padding-left: 0; border: 0; background: none;" value="">
                     </div>
                   </div>
                   <br>
 
-                  <p>Les pays doivent être renseignés au format
-                    <a href="images/files/upload/iso/Upela_codes_iso.pdf" target="_blank">ISO 3166-1</a>
+                  <p>
+                    <span translate="MASS_MAIL_UPLOAD.SPREADSHEET.COMMENT1">Les pays doivent être renseignés au format</span>
+                    <a href="images/files/upload/iso/Upela_codes_iso.pdf" target="_blank" translate="MASS_MAIL_UPLOAD.SPREADSHEET.COMMENT2">ISO 3166-1</a>
                   </p>
                   <p>
-                    <a href="images/files/templates/shipments/listeexpeditions_en.xls" download_="listeexpeditions_en.xls">Cliquez ici</a> pour télécharger un exemple de tableau de contacts au format excel
+                    <a href="images/files/templates/shipments/listeexpeditions_en.xls" download_="listeexpeditions_en.xls" translate="MASS_MAIL_UPLOAD.SPREADSHEET.COMMENT3">Cliquez ici</a>
+                    <span translate="MASS_MAIL_UPLOAD.SPREADSHEET.COMMENT4"> pour télécharger un exemple de tableau de contacts au format excel</span>
                   </p>
                   <p>
-                    <a href="images/files/templates/shipments/listeexpeditions.csv" download_="listeexpeditions.csv">Cliquez ici</a> pour télécharger un exemple de tableau de contacts au format csv ou txt
+                    <a href="images/files/templates/shipments/listeexpeditions.csv" download_="listeexpeditions.csv">Cliquez ici</a>
+                    <span translate="MASS_MAIL_UPLOAD.SPREADSHEET.COMMENT5"> pour télécharger un exemple de tableau de contacts au format csv ou txt</span>
                   </p>
                 </div>
               </div>
 
               <p>
-                <strong>Sender :</strong>
-                <span id="address1_container" class="text-muted"><strong>DomTom Réunion/Martinique/Guade</strong> (DomTom Réunion/Martinique/Guadeloupe) - DomTom Réunion/Martinique/Guadeloup - 97450 Saint-Louis (Reunion)</span>
-                <a href="#" onclick="openModal('modal_addresses', 'http://localhost:32770/en/address/popup_search.php?multiple=0&amp;address_type=1&amp;fill_address_fields=0', {}); return false;">Change sender</a>
+                <strong translate="MASS_MAIL_UPLOAD.SPREADSHEET.SENDER">Sender :</strong>
+                <span id="address1_container" class="text-muted">
+                  <strong>DomTom Réunion/Martinique/Guade</strong> (DomTom Réunion/Martinique/Guadeloupe) - DomTom Réunion/Martinique/Guadeloup - 97450 Saint-Louis (Reunion)
+                </span>
+                <a href="#" translate="MASS_MAIL_UPLOAD.SPREADSHEET.CHANGE_SENDER">Change sender</a>
               </p>
               <hr>
 
-              <h3 class="form-group-legend" style="margin-bottom:10px; cursor: pointer;">CARRIER</h3>
+              <h3 class="form-group-legend" style="margin-bottom:10px; cursor: pointer;" translate="MASS_MAIL_UPLOAD.CARRIER.TITLE">CARRIER</h3>
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <label for="priority" class="control-label col-lg-3 required">Priority</label>
+                    <label for="priority" class="control-label col-lg-3 required" translate="MASS_MAIL_UPLOAD.CARRIER.PRIORITY">Priority</label>
 
                     <div class="col-lg-7">
                       <select id="priority" name="priority" class="form-control">
@@ -153,9 +155,9 @@
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <label for="preferred_carrier_groups" class="control-label col-lg-3">Carrier</label>
-                    <div class="col-lg-7">
-                      <select id="preferred_carrier_groups" name="preferred_carrier_groups[]" class="form-control" multiple="" size="2" style="display: none;">
+                    <label class="control-label col-lg-3" translate="MASS_MAIL_UPLOAD.CARRIER.CARRIER">Carrier</label>
+                    <div class="col-lg-7" style="display: none">
+                      <select class="form-control" multiple="" size="2">
                         <option value="CHRONOPOST">CHRONOPOST</option>
                         <option value="COLISSIMO">COLISSIMO</option>
                         <option value="COURSIER">COURSIER</option>
@@ -166,18 +168,13 @@
                         <option value="TNT">TNT</option>
                         <option value="UPS">UPS</option>
                       </select>
-                      <button type="button" class="ui-multiselect ui-widget ui-state-default ui-corner-all" aria-haspopup="true" style="width: 286px;">
-                        <span class="ui-icon ui-icon-triangle-2-n-s"></span>
-                        <span>All</span>
-                      </button>
                     </div>
                   </div>
-                  <input type="hidden" id="excluded_carrier_ids" name="excluded_carrier_ids" value="15,17,20,21,22">
                 </div>
               </div>
               <hr>
 
-              <h3 class="form-group-legend" style="margin-bottom:10px;">COLLECTION DATE</h3>
+              <h3 class="form-group-legend" style="margin-bottom:10px;" translate="MASS_MAIL_UPLOAD.COLLECTION.TITLE">COLLECTION DATE</h3>
               <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-12">
                   <input type="hidden" id="dropoff_selection" name="dropoff_selection" value="1">
@@ -185,8 +182,9 @@
                   <div class="form-group">
                     <div class="col-lg-9 col-lg-offset-3">
                       <div class="radio">
-                        <label for="dropoff-0">
-                          <input type="radio" id="dropoff-0" name="dropoff" value="0" checked="" onclick="onclickDropoff();">&nbsp;Collection chosen (subject to the carrier availability)
+                        <label>
+                          <input type="radio" value="0" checked="">
+                          <span translate="MASS_MAIL_UPLOAD.COLLECTION.COLLECTION">&nbsp;Collection chosen (subject to the carrier availability)</span>
                         </label>
                       </div>
                     </div>
@@ -194,13 +192,14 @@
 
                   <div class="form-group">
                     <div class="col-lg-9 col-lg-offset-3">
-                      <label for="shipment_date" class="control-label required-" style="display: inline-block; padding: 0; height: 34px; line-height: 34px;">Date</label>&nbsp;
+                      <label for="shipment_date" class="control-label required-" style="display: inline-block; padding: 0; height: 34px; line-height: 34px;" translate="MASS_MAIL_UPLOAD.COLLECTION.DATE">Date</label>&nbsp;
                       <div class="input-group" style="width: 160px; display: inline-table; vertical-align: middle;">
                         <span class="input-group-addon">
                           <i class="fa fa-calendar"></i>
                         </span>
                         <input type="text" id="shipment_date" name="shipment_date" class="form-control datepicker hasDatepicker" value="11/01/2016" size="10" maxlength="10">
-                      </div>&nbsp;&nbsp;Between&nbsp;
+                      </div>
+                      <span translate="MASS_MAIL_UPLOAD.COLLECTION.BETWEEN">&nbsp;&nbsp;Between&nbsp;</span>
 
                       <select id="ready_time" name="ready_time" class="form-control input-small2 display-inline-block">
                         <option value="0800">08:00am</option>
@@ -227,8 +226,9 @@
                   <div class="form-group">
                     <div class="col-lg-9 col-lg-offset-3">
                       <div class="radio">
-                        <label for="dropoff-1">
-                          <input type="radio" id="dropoff-1" name="dropoff" value="1" onclick="onclickDropoff();">&nbsp;I drop off my parcel at
+                        <label>
+                          <input type="radio" value="1">
+                          <span translate="MASS_MAIL_UPLOAD.COLLECTION.DROP_OFF">&nbsp;I drop off my parcel at</span>
                         </label>
                       </div>
                     </div>
@@ -238,8 +238,9 @@
 
               <div class="row">
                 <center>
-                  <button type="submit" class="btn btn-primary btn-lg" id="btn_save" name="btn_save" onclick="return true;">
-                    <i class="glyphicon glyphicon-ok"></i> IMPORT
+                  <button type="submit" class="btn btn-primary btn-lg">
+                    <i class="glyphicon glyphicon-ok"></i>
+                    <span translate="MASS_MAIL_UPLOAD.IMPORT"> IMPORT</span>
                   </button>
                 </center>
               </div>
