--- a/app/views/credit-account.html
+++ b/app/views/credit-account.html
@@ -1,54 +1,100 @@
 <div id="wrapper" class="clearfix container">
   <div class="clearfix row">
     <section id="main" class="col-lg-12">
-      <div id="load">
-        <img src="images/loading.gif" alt="Loading...">&nbsp;&nbsp;Please wait...
-      </div>
-
-      <h1>My Client Space</h1>
+      <h1 translate="SETTINGS.TITLE">My Client Space</h1>
       <div class="row">
         <div class="col-md-2">
           <ul id="account-nav" class="nav nav-tabs nav-stacked account-nav">
             <li>
-              <a href="#/my-account"><span class="fa fa-home"></span> Overall view</a>
+              <a href="#/my-account">
+                <i class="fa fa-home"></i>
+                <span translate="SETTINGS.OVERALL">Overall view</span>
+              </a>
             </li>
           </ul>
 
           <ul id="account-nav2" class="nav nav-tabs nav-stacked account-nav">
-            <!--<li><a href="https://www.upela.com/en/"><span class="fa fa-paper-plane"></span> Single shipment</a></li>-->
-            <li><a href="#/ship-to-contact"><span class="fa fa-user"></span> Ship to contact</a></li>
-            <li><a href="#/mass-mailing"><span class="fa fa-users"></span> Mass mailing</a></li>
-            <li><a href="#/mass-mailing-upload"><span class="fa fa-floppy-o"></span> Sending by file</a></li>
+            <li>
+              <a href="#/ship-to-contact">
+                <i class="fa fa-user"></i>
+                <span translate="SETTINGS.SHIP"> Ship to contact</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/mass-mailing">
+                <i class="fa fa-users"></i>
+                <span translate="SETTINGS.MAILING"> Mass mailing</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/mass-mailing-upload">
+                <i class="fa fa-floppy-o"></i>
+                <span translate="SETTINGS.SENDING"> Sending by file</span>
+              </a>
+            </li>
           </ul>
 
           <ul id="account-nav3" class="nav nav-tabs nav-stacked account-nav">
-            <li><a href="#/my-contacts"><span class="fa fa-book"></span> My contacts</a></li>
-            <li class="active"><a href="#/credit-account"><span class="fa fa-credit-card"></span> Credit account</a></li>
-            <li><a href="#/my-store"><span class="fa fa-shopping-cart"></span> My stores</a></li>
-            <li><a href="#/settings"><span class="fa fa-cogs"></span> Settings</a></li>
+            <li>
+              <a href="#/my-contacts">
+                <i class="fa fa-book"></i>
+                <span translate="SETTINGS.CONTACTS"> My contacts</span>
+              </a>
+            </li>
+            <li class="active">
+              <a href="#/credit-account">
+                <i class="fa fa-credit-card"></i>
+                <span translate="SETTINGS.CREDIT"> Credit account</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/my-store">
+                <i class="fa fa-shopping-cart"></i>
+                <span translate="SETTINGS.STORE"> My stores</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/settings">
+                <i class="fa fa-cogs"></i>
+                <span translate="SETTINGS.SETTINGS"> Settings</span>
+              </a>
+            </li>
           </ul>
 
           <ul id="account-nav4" class="nav nav-tabs nav-stacked account-nav">
-            <li><h3>Our programs</h3></li>
-            <li><a href="#/refer-contacts"><span class="fa fa-gift"></span> Referral</a></li>
-            <li><a href="#/loyalty"><span class="fa fa-gift"></span> Loyalty</a></li>
+            <li>
+              <h3 translate="SETTINGS.PROGRAMS">Our programs</h3>
+            </li>
+            <li>
+              <a href="#/refer-contacts">
+                <i class="fa fa-gift"></i>
+                <span translate="SETTINGS.REFERRAL"> Referral</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/loyalty">
+                <i class="fa fa-gift"></i>
+                <span translate="SETTINGS.LOYALTY"> Loyalty</span>
+              </a>
+            </li>
           </ul>
         </div>
 
         <div class="col-md-10">
           <div class="panel-white cancel-padding-left-15 panel-white-bordered-">
             <h1>
-              <i class="fa fa-credit-card"></i>Credit your account
+              <i class="fa fa-credit-card"></i>
+              <span translate="CREDIT_ACCOUNT.TITLE">Credit your account</span>
             </h1>
-            <p class="text-muted">Credit your account and get free extra credits!</p>
+            <p class="text-muted" translate="CREDIT_ACCOUNT.COMMENT">Credit your account and get free extra credits!</p>
             <br>
-            <p><strong>CHOOSE THE AMOUNT TO CREDIT</strong></p>
+            <p><strong translate="CREDIT_ACCOUNT.CHOOSE_AMOUNT">CHOOSE THE AMOUNT TO CREDIT</strong></p>
 
-            <form id="CreditAccountForm" class="form-horizontal" role="form" enctype="multipart/form-data" action="http://localhost:32770/en/credit-account/" accept-charset="UTF-8" method="post" onsubmit="return true;">
+            <form id="CreditAccountForm" class="form-horizontal">
               <div class="form-group">
-                <label for="amount" class="control-label col-lg-3 required">Amount (€)</label>
+                <label class="control-label col-lg-3 required" translate="CREDIT_ACCOUNT.AMOUNT">Amount (€)</label>
                 <div class="col-lg-2">
-                  <select id="amount" name="amount" class="form-control">
+                  <select class="form-control">
                     <option value="100" selected="">100</option>
                     <option value="300">300</option>
                   </select>
@@ -56,12 +102,15 @@
               </div>
 
               <div class="alert alert-info text-center">
-                For <strong>100€</strong> purchased, get <strong>2% free</strong> additional credits!<br>For <strong>300€</strong> purchased, get <strong>3% free</strong> additional credits!
+                <p translate="CREDIT_ACCOUNT.ADDITIONAL_TWO">For <strong>100€</strong> purchased, get <strong>2% free</strong> additional credits!<br></p>
+                <p translate="CREDIT_ACCOUNT.ADDITIONAL_THREE">For <strong>300€</strong> purchased, get <strong>3% free</strong> additional credits!</p>
               </div>
+
               <div class="form-group">
                 <div class="col-lg-9 col-lg-offset-3">
-                  <button type="submit" class="btn btn-primary btn-lg" id="btn_save" name="btn_save" onclick="return true;">
-                    <i class="glyphicon glyphicon-ok"></i> Continue
+                  <button type="submit" class="btn btn-primary btn-lg" id="btn_save" name="btn_save">
+                    <i class="glyphicon glyphicon-ok"></i>
+                    <span translate="CREDIT_ACCOUNT.CONTINUE">Continue</span>
                   </button>
                 </div>
               </div>
