translate refer page

--- a/app/views/refer-contacts.html
+++ b/app/views/refer-contacts.html
@@ -1,37 +1,82 @@
 <div id="wrapper" class="clearfix container">
   <div class="clearfix row">
     <section id="main" class="col-lg-12">
-      <div id="load">
-        <img src="images/loading.gif" alt="Loading...">&nbsp;&nbsp;Please wait...
-      </div>
-
-      <h1>My Client Space</h1>
+      <h1 translate="SETTINGS.TITLE">My Client Space</h1>
       <div class="row">
         <div class="col-md-2">
           <ul id="account-nav" class="nav nav-tabs nav-stacked account-nav">
             <li>
-              <a href="#/my-account"><span class="fa fa-home"></span> Overall view</a>
+              <a href="#/my-account">
+                <i class="fa fa-home"></i>
+                <span translate="SETTINGS.OVERALL">Overall view</span>
+              </a>
             </li>
           </ul>
 
           <ul id="account-nav2" class="nav nav-tabs nav-stacked account-nav">
-            <!--<li><a href="https://www.upela.com/en/"><span class="fa fa-paper-plane"></span> Single shipment</a></li>-->
-            <li><a href="#/ship-to-contact"><span class="fa fa-user"></span> Ship to contact</a></li>
-            <li><a href="#/mass-mailing"><span class="fa fa-users"></span> Mass mailing</a></li>
-            <li><a href="#/mass-mailing-upload"><span class="fa fa-floppy-o"></span> Sending by file</a></li>
+            <li>
+              <a href="#/ship-to-contact">
+                <i class="fa fa-user"></i>
+                <span translate="SETTINGS.SHIP"> Ship to contact</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/mass-mailing">
+                <i class="fa fa-users"></i>
+                <span translate="SETTINGS.MAILING"> Mass mailing</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/mass-mailing-upload">
+                <i class="fa fa-floppy-o"></i>
+                <span translate="SETTINGS.SENDING"> Sending by file</span>
+              </a>
+            </li>
           </ul>
 
           <ul id="account-nav3" class="nav nav-tabs nav-stacked account-nav">
-            <li><a href="#/my-contacts"><span class="fa fa-book"></span> My contacts</a></li>
-            <li><a href="#/credit-account"><span class="fa fa-credit-card"></span> Credit account</a></li>
-            <li><a href="#/my-store"><span class="fa fa-shopping-cart"></span> My stores</a></li>
-            <li><a href="#/settings"><span class="fa fa-cogs"></span> Settings</a></li>
+            <li>
+              <a href="#/my-contacts">
+                <i class="fa fa-book"></i>
+                <span translate="SETTINGS.CONTACTS"> My contacts</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/credit-account">
+                <i class="fa fa-credit-card"></i>
+                <span translate="SETTINGS.CREDIT"> Credit account</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/my-store">
+                <i class="fa fa-shopping-cart"></i>
+                <span translate="SETTINGS.STORE"> My stores</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/settings">
+                <i class="fa fa-cogs"></i>
+                <span translate="SETTINGS.SETTINGS"> Settings</span>
+              </a>
+            </li>
           </ul>
 
           <ul id="account-nav4" class="nav nav-tabs nav-stacked account-nav">
-            <li><h3>Our programs</h3></li>
-            <li class="active"><a href="#/refer-contacts"><span class="fa fa-gift"></span> Referral</a></li>
-            <li><a href="#/loyalty"><span class="fa fa-gift"></span> Loyalty</a></li>
+            <li>
+              <h3 translate="SETTINGS.PROGRAMS">Our programs</h3>
+            </li>
+            <li class="active">
+              <a href="#/refer-contacts">
+                <i class="fa fa-gift"></i>
+                <span translate="SETTINGS.REFERRAL"> Referral</span>
+              </a>
+            </li>
+            <li>
+              <a href="#/loyalty">
+                <i class="fa fa-gift"></i>
+                <span translate="SETTINGS.LOYALTY"> Loyalty</span>
+              </a>
+            </li>
           </ul>
         </div>
 
@@ -41,12 +86,13 @@
               <div class="col-md-12">
                 <div class="panel-white cancel-padding-left-15" style="text-align: center;">
                   <h1 style="text-align: center;">
-                    <span style="color: #41a7bc;">SPONSORSHIP </span>
-                    <span style="color: #808080;">Operation :<br>The Win-Win Principle<br></span>
-                    <span style="color: #808080;">according to&nbsp;</span>
+                    <span style="color: #41a7bc;" translate="REFERRAL.SPONSORSHIP">SPONSORSHIP </span>
+                    <span style="color: #808080;" translate="REFERRAL.OPERATION">Operation :</span>
+                    <span style="color: #808080;" translate="REFERRAL.PRINCIPLE">The Win-Win Principle</span>
+                    <span style="color: #808080;" translate="REFERRAL.ACCORDING">according to&nbsp;</span>
                     <span style="color: #f37845;">Upela !</span>
                   </h1>
-                  with gift vouchers&nbsp;<br><br>
+                  <span translate="REFERRAL.GIFT">with gift vouchers&nbsp;<br><br></span>
                   <img src="images/files/upload/parrainage/logo_eticket_kadeos.png" alt="parrainage avec Ticket Kadeos Online" width="154" height="42">
                 </div>
                 <div class="cancel-padding-left-15" style="margin-bottom: 20px;">
@@ -58,33 +104,37 @@
 
           <div class="panel-white cancel-padding-left-15 panel-white-bordered-">
             <h2 style="margin-bottom: 10px;">
-              <i class="fa fa-gift"></i>How does it work?
+              <i class="fa fa-gift"></i>
+              <span translate="REFERRAL.HOW_WORK.TITLE">How does it work?</span>
             </h2>
 
-            <p>There are two options :</p>
+            <p translate="REFERRAL.HOW_WORK.COMMENT">There are two options :</p>
             <br>
 
-            <p><strong><u>Option n°1 :</u></strong></p>
-            <p><strong>Invite your social media contacts:</strong></p>
-            <p>Just click here, and win €20 per sponsored person.</p>
+            <p><strong><u translate="REFERRAL.HOW_WORK.OPTION1.TITLE">Option No 1 :</u></strong></p>
+            <p><strong translate="REFERRAL.HOW_WORK.OPTION1.COMMENT1">Invite your social media contacts:</strong></p>
+            <p translate="REFERRAL.HOW_WORK.OPTION1.COMMENT2">Just click here, and win €20 per sponsored person.</p>
             <br>
 
             <div class="addthis_toolbox_container2">
-              <div class="addthis_toolbox addthis_default_style addthis_32x32_style text-center" addthis:url="http://localhost:32769/en/contact-pro?parrain=cli1l@upela.com" addthis:title="Spread the word: we can now ship without breaking the bank!" addthis:description="Discover the easiest and most cost-effective way of sending your parcels, pallets, ... Take advantage of services provided by the leaders Chronopost, UPS, FedEx, DHL, TNT, DPD at the best price. A free service, without minimum invoice designed for SMEs." addthis:image="http://localhost:32769/files/upload/parrainage/upela-partenaire-transport-tpe-pme.jpg">
+              <div class="addthis_toolbox addthis_default_style addthis_32x32_style text-center">
                 <a class="addthis_button_facebook at300b" title="Share on Facebook" href="#">
                   <span class="btn btn-md btn-facebook">
-                    <i class="fa fa-facebook"></i>Share on Facebook
+                    <i class="fa fa-facebook"></i>
+                    <span translate="REFERRAL.HOW_WORK.OPTION1.FACEBOOK">Share on Facebook</span>
                   </span>
                 </a>
                 <!--<a class="addthis_button_twitter" title="Share on Twitter"><span class="btn btn-md btn-twitter"><i class="fa fa-twitter"></i>Share on Twitter</span></a>-->
                 <a class="addthis_button_linkedin at300b" title="Share on LinkedIn" target="_blank" href="#">
                   <span class="btn btn-md btn-linkedin">
-                    <i class="fa fa-linkedin"></i>Share on LinkedIn
+                    <i class="fa fa-linkedin"></i>
+                    <span translate="REFERRAL.HOW_WORK.OPTION1.LINKEDIN">Share on LinkedIn</span>
                   </span>
                 </a>
                 <a class="addthis_button_viadeo at300b" title="Share on Viadeo" target="_blank" href="#">
                   <span class="btn btn-md btn-viadeo">
-                    <i class="viadeo"></i>Share on Viadeo
+                    <i class="viadeo"></i>
+                    <span translate="REFERRAL.HOW_WORK.OPTION1.VIADEO">Share on Viadeo</span>
                   </span>
                 </a>
                 <div class="atclear"></div>
@@ -92,14 +142,14 @@
             </div>
 
             <p>&nbsp;</p>
-            <p><strong><u>Option n°2 :</u></strong></p>
+            <p><strong><u translate="REFERRAL.HOW_WORK.OPTION2.TITLE">Option No 2 :</u></strong></p>
 
-            <form class="form-horizontal" role="form" enctype="multipart/form-data" action="http://localhost:32769/en/my-account/refer-contacts" accept-charset="UTF-8" method="post">
+            <form class="form-horizontal">
               <input type="hidden" name="refer_contacts" value="1">
 
               <div class="form-group">
                 <div class="col-md-12">
-                  <p>Add the email of the contacts you want to refer.</p>
+                  <p translate="REFERRAL.HOW_WORK.OPTION2.ADD_EMAIL">Add the email of the contacts you want to refer.</p>
                 </div>
               </div>
 
@@ -107,14 +157,14 @@
                 <div class="col-md-9 col-md-offset-2">
                   <ul id="recipients">
                     <li id="recipient0" class="field recipient">
-                      <input type="text" class="form-control" id="email_0" name="email[]" value="" maxlength="64" placeholder="@">
+                      <input type="text" class="form-control" value="" maxlength="64" placeholder="@">
                     </li>
 
                     <li id="add-remove-buttons-cell">
-                      <a id="add_link" href="#" onclick="addRowToTable(); return false;" title="Add">
+                      <a id="add_link" href="#">
                         <i class="glyphicon glyphicon-plus-sign"></i>
                       </a>
-                      <a id="remove_link" href="#" onclick="removeRowFromTable(); return false;" title="Remove">
+                      <a id="remove_link" href="#">
                         <i class="glyphicon glyphicon-remove-sign"></i>
                       </a>
                     </li>
@@ -125,12 +175,12 @@
 
               <div class="form-group">
                 <div class="col-md-12">
-                  <p>Add a personalized message:</p>
+                  <p translate="REFERRAL.HOW_WORK.OPTION2.ADD_MESSAGE">Add a personalized message:</p>
                 </div>
               </div>
 
               <div class="form-group">
-                <label class="control-label col-md-2">Message</label>
+                <label class="control-label col-md-2" translate="REFERRAL.HOW_WORK.OPTION2.MESSAGE">Message</label>
                 <div class="col-md-9">
                   <textarea class="input-xxlarge" id="message" name="message" rows="3" style="overflow: hidden;"></textarea>
                 </div>
@@ -138,15 +188,16 @@
 
               <center>
                 <button type="submit" class="btn btn-primary btn-lg">
-                  <i class="glyphicon glyphicon-ok"></i> Send invitations
+                  <i class="glyphicon glyphicon-ok"></i>
+                  <span translate="REFERRAL.HOW_WORK.OPTION2.SEND_INVITATION">Send invitations</span>
                 </button>
               </center>
               <br>
 
               <div class="form-group">
                 <div class="col-md-12">
-                  <p>You can also send by email the link below to your contacts:<br>
-                    http://localhost:32769/en/contact-pro?parrain=cli1l@upela.com      </p>
+                  <p translate="REFERRAL.HOW_WORK.OPTION2.COMMENT">You can also send by email the link below to your contacts:<br>http://localhost:32769/en/contact-pro?parrain=cli1l@upela.com
+                  </p>
                 </div>
               </div>
             </form>
@@ -156,17 +207,17 @@
           <div class="cms_content">
             <div class="panel-white cancel-padding-left-15">
               <h2>
-                <span style="text-decoration: underline;">
+                <span translate="REFERRAL.HOW_WORK.BENEFIT.TITLE">
                   <a href="https://www.ticketkadeosonline.fr/Presentation.aspx">Ticket Kadéos® Online</a>
-                </span> voucher benefits :
+                </span>
               </h2>
               <ul>
-                <li>Easy and practical, the gift voucher is directly emailed to beneficiary;</li>
-                <li>It allows an easy and secured purchase on the Internet, 24/7;</li>
-                <li>Scored : can be spent in one purchase or divided into several purchases;</li>
-                <li>Compatible with other additional means of payment;</li>
-                <li>Access to thousands of items on 36 online shops covering various industries;</li>
-                <li>The beneficiary is allowed to exchange his Ticket Kadéos® Online voucher with a Ticket Kadéos® Infini.paper gift voucher.</li>
+                <li translate="REFERRAL.HOW_WORK.BENEFIT.COMMENT1">Easy and practical, the gift voucher is directly emailed to beneficiary;</li>
+                <li translate="REFERRAL.HOW_WORK.BENEFIT.COMMENT2">It allows an easy and secured purchase on the Internet, 24/7;</li>
+                <li translate="REFERRAL.HOW_WORK.BENEFIT.COMMENT3">Scored : can be spent in one purchase or divided into several purchases;</li>
+                <li translate="REFERRAL.HOW_WORK.BENEFIT.COMMENT4">Compatible with other additional means of payment;</li>
+                <li translate="REFERRAL.HOW_WORK.BENEFIT.COMMENT5">Access to thousands of items on 36 online shops covering various industries;</li>
+                <li translate="REFERRAL.HOW_WORK.BENEFIT.COMMENT6">The beneficiary is allowed to exchange his Ticket Kadéos® Online voucher with a Ticket Kadéos® Infini.paper gift voucher.</li>
               </ul>
             </div>
           </div>
@@ -175,21 +226,25 @@
         <div class="col-md-3 cancel-padding-left-15 cms_content">
           <div class="panel-white" style="text-align: justify;">
             <h5 style="text-align: center;">
-              <span style="color: #808080;">Ticket Kadéos® Online voucher give access to thousands of items on 36 online shops covering various industries</span><br><img class="img-responsive" src="/files/upload/parrainage/logos Kadeos nouvelle disposition.png" alt="liste enseignes partenaires" width="337" height="323" style="max-height: 500px; display: block; margin-left: auto; margin-right: auto;"><span style="color: #808080;">They are also redeemable for Ticket Kadeos Infini® paper gift vouchers</span>
+              <span style="color: #808080;" translate="REFERRAL.RIGHT_SIDE.ONLINE_SHOP">Ticket Kadéos® Online voucher give access to thousands of items on 36 online shops covering various industries</span><br>
+              <img class="img-responsive" src="images/files/upload/parrainage/logos Kadeos nouvelle disposition.png" alt="liste enseignes partenaires" width="337" height="323" style="max-height: 500px; display: block; margin-left: auto; margin-right: auto;">
+              <span style="color: #808080;" translate="REFERRAL.RIGHT_SIDE.GIFT_VOUCHER">They are also redeemable for Ticket Kadeos Infini® paper gift vouchers</span>
             </h5>
           </div>
           <div class="panel-white" style="text-align: justify;">
-            <h2>Terms and conditions:</h2>
+            <h2 translate="REFERRAL.RIGHT_SIDE.TERM_CONDITION.TITLE">Terms and conditions:</h2>
             <ul>
-              <li style="text-align: left;">Offer cannot be combined with other commercial operations<br><br></li>
-              <li style="text-align: left;">Valid for 12 months from the date on which the beneficiary has been emailed<br><br></li>
-              <li style="text-align: left;">The Sponsored Person must not be an employee from the same company (or any subsidiary company belonging to the same group) as his Sponsor.<br><br></li>
-              <li style="text-align: left;">A sponsor cannot sponsor himself<br><br></li>
-              <li style="text-align: left;">The email address from the Sponsored Person must be different from the email address of his Sponsor</li>
+              <li style="text-align: left;" translate="REFERRAL.RIGHT_SIDE.TERM_CONDITION.COMMENT1">Offer cannot be combined with other commercial operations<br><br></li>
+              <li style="text-align: left;" translate="REFERRAL.RIGHT_SIDE.TERM_CONDITION.COMMENT2">Valid for 12 months from the date on which the beneficiary has been emailed<br><br></li>
+              <li style="text-align: left;" translate="REFERRAL.RIGHT_SIDE.TERM_CONDITION.COMMENT3">The Sponsored Person must not be an employee from the same company (or any subsidiary company belonging to the same group) as his Sponsor.<br><br></li>
+              <li style="text-align: left;" translate="REFERRAL.RIGHT_SIDE.TERM_CONDITION.COMMENT4">A sponsor cannot sponsor himself<br><br></li>
+              <li style="text-align: left;" translate="REFERRAL.RIGHT_SIDE.TERM_CONDITION.COMMENT5">The email address from the Sponsored Person must be different from the email address of his Sponsor</li>
             </ul>
           </div>
           <div class="panel-white" style="text-align: justify;">
-            <div class="alert alert-warning">Please note that we invite you today to add to your address book the email address of the shipper of your Kadéos gift voucher: <a href="mailto:c.lopez@upela.com">c.lopez@upela.com</a>. Also, do not forget to check your “Junk Mail” or “Spam” folders.</div>
+            <div class="alert alert-warning">
+              <span translate="REFERRAL.RIGHT_SIDE.NOTE">Please note that we invite you today to add to your address book the email address of the shipper of your Kadéos gift voucher: <a href="mailto:c.lopez@upela.com">c.lopez@upela.com</a>. Also, do not forget to check your “Junk Mail” or “Spam” folders.</span>
+            </div>
           </div>
         </div>
       </div>
